--- a/mexico/360.html
+++ b/mexico/360.html
@@ -40,9 +40,18 @@
      
      <script type="text/javascript">
 		jQuery(document).ready(function($) {
-			var expo = new Expo360({xml:"configuration/settings.xml", where:"#viewer"});
+			
+			xmlfile="configuration/settings.xml";
+			
+			if($(window).width()<766){ //mobile
+				$("#viewer").css("zoom",0.50);
+			}
+			 
+			
+			var expo = new Expo360({xml:xmlfile, where:"#viewer"});
 		});
 	
+		
 
 	
     </script>
