estilos completos mexico

--- a/Utility/platforms/ios/www/index.html
+++ b/Utility/platforms/ios/www/index.html
@@ -41,13 +41,13 @@ Do the following if you're using your customized build of modernizr (http://www.
         <div class="fluid menuinicio">
         
         <ul class="rombo">
-        <a href="catalogo.html">
+        <a class="primerapantalla" href="catalogo.html">
         <li class="rombo">
           Catálogo</li></a> 
-        	<a href="ubicaciones.html"> 
+        	<a  class="primerapantalla" href="ubicaciones.html"> 
          <li class="rombo" style="margin-left:20px">
           Puntos de venta </li></a>
-      <a href="contacto.html"> 
+      <a class="primerapantalla" href="contacto.html"> 
         <li class="rombo"  style="margin-left:40px">
            Contáctanos
            </li></a>
