--- a/Utility/platforms/ios colombia/www/images/3000r/hs2.html
+++ b/Utility/platforms/ios colombia/www/images/3000r/hs2.html
@@ -18,7 +18,7 @@ body {
 <table width="100%"  border="0">
   <tbody>
     <tr>
-      <td colspan="2" align="center" valign="middle" style="color:#d9002e" scope="col"><h1>PATINES DE APOYO</h1></td>
+      <td colspan="2" align="center" valign="middle" style="color:#d9002e" scope="col"><h1>PATAS DE APOYO</h1></td>
     </tr>
     <tr>
       <td width="30%" align="center" valign="bottom" scope="col"><img src="hs2.jpg" width="100%" alt=""/></td>
