--- a/México/Utility México/platforms/ios/www/images/3000r/hs2.html
+++ b/México/Utility México/platforms/ios/www/images/3000r/hs2.html
@@ -9,7 +9,16 @@ body {
 	background-size: 100% ; 
 	background-repeat:no-repeat;
 	padding:10px;
+		
 }
+*{ font-family:arial}
+@media screen and (max-width: 766px) {
+body {
+	zoom:0.3;
+}
+}
+
+
 </style>
 </head>
 
