--- a/México/Utility México/platforms/ios/www/images/3000r/hs4.html
+++ b/México/Utility México/platforms/ios/www/images/3000r/hs4.html
@@ -10,6 +10,13 @@ body {
 	background-repeat:no-repeat;
 	padding:10px;
 }
+*{ font-family:arial;-webkit-transform:translate3d(0,0,0);}
+@media screen and (max-width: 766px) {
+body {
+	zoom:0.4;
+	-webkit-overflow-scrolling:touch !important;
+}
+}
 </style>
 </head>
 
