--- a/México/Utility México/platforms/ios/www/images/3000r/hs1.html
+++ b/México/Utility México/platforms/ios/www/images/3000r/hs1.html
@@ -10,6 +10,12 @@ body {
 	background-repeat:no-repeat;
 	padding:10px;
 }
+*{ font-family:arial}
+@media screen and (max-width: 766px) {
+body {
+	zoom:0.5;
+}
+}
 </style>
 </head>
 
