--- a/México/Utility México/platforms/ios/www/images/3000r/hs5.html
+++ b/México/Utility México/platforms/ios/www/images/3000r/hs5.html
@@ -10,7 +10,15 @@ body {
 	background-repeat:no-repeat;
 	padding:10px;
 }
+*{ font-family:arial;-webkit-transform:translate3d(0,0,0);}
+@media screen and (max-width: 766px) {
+body {
+	zoom:0.1;
+	-webkit-overflow-scrolling:touch !important;
+}
+}
 </style>
+
 </head>
 
 <body> 
