--- a/ejemplo co/ejemplo/platforms/ios/www/images/3000r/hs4.html
+++ b/ejemplo co/ejemplo/platforms/ios/www/images/3000r/hs4.html
@@ -10,6 +10,12 @@ body {
 	background-repeat:no-repeat;
 	padding:10px;
 }
+*{ font-family:arial;-webkit-overflow-scrolling:touch}
+@media screen and (max-width: 766px) {
+body {
+	zoom:0.4;
+}
+}
 </style>
 </head>
 
